<resources>
    <string name="app_name">Social Alert</string>
    <string name="btn_text_alert">Alert</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="settings_label">settings</string>
    <string name="default_message_text">I\'m in danger. Please help me.</string>
    <string name="name_hint">Nick Name people know u by!!</string>
    <string name="hint_contact_1">Contact 1 include prefix +91</string>
    <string name="hint_contact_2">Contact 2 include prefix +91</string>
    <string name="hint_contact_3">Contact 3 include prefix +91</string>
    <string name="hint_contact_4">Contact 4 include prefix +91</string>
    <string name="text_save_btn">Save</string>
    <string name="text_preferences">Preferences not set. Click here!</string>
    <string name="text_network_btn">Network</string>
    <string name="action_settings">Settings</string>
    <string name="current_feed_title">Current</string>
    <string name="feed_title">Feed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
