<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alertLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/NoTitle"
    android:background="#3C4065"
    tools:context="com.example.socialalert.AlertActivity">


    <Button
        android:id="@+id/alert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_btn_alert"
        android:onClick="onAlert"
        android:text="@string/btn_text_alert"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_preferences"
        android:textColor="#D4566F"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/network_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/text_network_btn"
        android:textColor="#FFFFFF"
        android:gravity="start|center_vertical"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-60dp"
        android:background="@drawable/change_container"
        android:onClick="onNetworkClicked"/>

</RelativeLayout>
