<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.socialalert.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/user_icon"
                    android:src="@drawable/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/username"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_toEndOf="@+id/user_icon"
                    android:hint="@string/name_hint"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceMedium"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#616161"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/message_icon"
                    android:src="@drawable/ic_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/message"
                    android:inputType="textMultiLine"
                    android:maxLength="42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_marginStart="50dp"
                    android:layout_toEndOf="@+id/message_icon"
                    android:text="@string/default_message_text"
                    android:textAppearance="?android:textAppearanceMedium"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#616161"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/contact_icon"
                    android:src="@drawable/ic_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

                <LinearLayout
                    android:id="@+id/contact1Container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/contact_icon"
                    android:layout_marginStart="50dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/contact1"
                        android:inputType="number|text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical"
                        android:hint="@string/hint_contact_1"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="0.15"
                        android:onClick="onPickContact1"
                        android:background="@android:drawable/ic_input_add" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact2Container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/contact_icon"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/contact1Container">


                    <EditText
                        android:id="@+id/contact2"
                        android:inputType="number|text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="fill_vertical"
                        android:hint="@string/hint_contact_2"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="0.15"
                        android:onClick="onPickContact2"
                        android:background="@android:drawable/ic_input_add"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact3Container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/contact_icon"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/contact2Container">


                    <EditText
                        android:id="@+id/contact3"
                        android:inputType="number|text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical"
                        android:hint="@string/hint_contact_3"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="0.15"
                        android:onClick="onPickContact3"
                        android:background="@android:drawable/ic_input_add"/>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/contact4Container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/contact_icon"
                    android:layout_marginStart="50dp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/contact3Container">


                    <EditText
                        android:id="@+id/contact4"
                        android:inputType="number|text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="fill_vertical"
                        android:layout_marginTop="5dp"
                        android:hint="@string/hint_contact_4"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="0.15"
                        android:onClick="onPickContact4"
                        android:background="@android:drawable/ic_input_add"/>


                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_save_btn"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/colorAccent"
        android:onClick="SavePreference"/>

</RelativeLayout>
